--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   weather_icons: ^3.0.0
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  flutter_charts: ^0.5.0
 
 dev_dependencies:
   flutter_test:
